--- a/SMon/SMon.csproj
+++ b/SMon/SMon.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Authors>staret</Authors>
+    <Company>SEIL</Company>
+    <Product>SMon</Product>
+    <Description>SMon makes it easy to install the application as a service.
+
+</Description>
+    <PackageProjectUrl>https://github.com/staret-hub/SMon</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/staret-hub/SMon</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
 </Project>
