--- a/SMon/SMon.csproj
+++ b/SMon/SMon.csproj
@@ -3,15 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Authors>staret</Authors>
-    <Company>SEIL</Company>
+    <Company>SEIL Team</Company>
     <Product>SMon</Product>
     <Description>SMon makes it easy to install the application as a service.
-
 </Description>
     <PackageProjectUrl>https://github.com/staret-hub/SMon</PackageProjectUrl>
     <RepositoryUrl>https://github.com/staret-hub/SMon</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <Version>1.0.0</Version>
+    <Version>0.0.1</Version>
+    <PackageReleaseNotes>support for LInux</PackageReleaseNotes>
+    <PackageTags>.NET Core, Service</PackageTags>
   </PropertyGroup>
 
 </Project>
