--- a/SMon.TestService/SMon.TestService.csproj
+++ b/SMon.TestService/SMon.TestService.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject></StartupObject>
+    <StartupObject>SMon.TestService.SMon</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
